--- a/uknown_e1xfvn.read.json
+++ b/uknown_e1xfvn.read.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_e1xfvn.read",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_e1xfvn.read",
 	"sector": "K_7717",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561019900534
+		},
+		{
+			"type": "died",
+			"when": 1568453414870
 		}
 	],
 	"next_scrape": 1567754405864,
@@ -108,8 +112,8 @@
 			]
 		}
 	],
-	"updt": 1567648637588,
-	"edit": 88,
+	"updt": 1567714945331,
+	"edit": 89,
 	"identified": [
 		{
 			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
