--- a/unknown_yxz1xb.force_quit.json
+++ b/unknown_yxz1xb.force_quit.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yxz1xb.force_quit",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yxz1xb.force_quit",
 	"sector": "K_7243",
 	"sec_level": 1,
 	"date_added": 1560146973124,
-	"last_scraped": 1568456247991,
+	"last_scraped": 1568460921961,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,15 +22,15 @@
 		]
 	],
 	"pl_output": "\n\n       `B----` `DFORCE QUIT BOX` `B----` \n\n            `bEnter` `Npassword`\n\n",
-	"next_scrape": 1568496911205,
-	"updt": 1568448556294,
-	"edit": 267,
+	"next_scrape": 1568504540569,
+	"updt": 1568456457921,
+	"edit": 268,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568456247991,
+	"last_update": 1568460921961,
 	"output": [
 		{
 			"args": {},
-			"calls": 27149914,
+			"calls": 27541281,
 			"base": "\n\n       `B----` `DFORCE QUIT BOX` `B----` \n\n            `bEnter` `Npassword`\n\n",
 			"fragments": [
 				"two.\\n",
