--- a/unknown_v602ar.ez_25_hack.json
+++ b/unknown_v602ar.ez_25_hack.json
@@ -6,7 +6,7 @@
 	"sector": "NGC_7203",
 	"sec_level": 4,
 	"date_added": 1566848734834,
-	"last_scraped": 1568486409063,
+	"last_scraped": 1568491137513,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 15,
-	"next_scrape": 1568529064300,
+	"next_scrape": 1568536821974,
 	"category": "coin_flipper",
-	"last_update": 1568486409063,
+	"last_update": 1568491137513,
 	"output": [
 		{
 			"args": {},
-			"calls": 998956,
+			"calls": 1006904,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"320B1",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568481811027,
-	"edit": 98
+	"updt": 1568486551555,
+	"edit": 99
 }
