--- a/abandoned_tpnxm3.defender.json
+++ b/abandoned_tpnxm3.defender.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565715031572,
-	"last_scraped": 1568486549709,
+	"last_scraped": 1568491358989,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568533308004,
+	"next_scrape": 1568533150490,
 	"category": "coin_flipper",
-	"last_update": 1568486549709,
+	"last_update": 1568491358989,
 	"output": [
 		{
 			"args": {},
-			"calls": 989676,
+			"calls": 1002496,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ck?\\n2",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568482487858,
-	"edit": 104
+	"updt": 1568486776394,
+	"edit": 105
 }
