--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -6,7 +6,7 @@
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565570384834,
-	"last_scraped": 1568491268211,
+	"last_scraped": 1568497835821,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568538055438,
+	"next_scrape": 1568539720747,
 	"category": "dice_roller",
-	"last_update": 1568491268211,
+	"last_update": 1568497835821,
 	"output": [
 		{
 			"args": {},
-			"calls": 998708,
+			"calls": 1003322,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to ne",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568486551555,
-	"edit": 103
+	"updt": 1568491290433,
+	"edit": 104
 }
