--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1568503212986,
+	"last_scraped": 1568507833900,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568545818185,
+	"next_scrape": 1568552183795,
 	"category": "plant_sim",
-	"last_update": 1568503212986,
+	"last_update": 1568507833900,
 	"output": [
 		{
 			"args": {},
@@ -113,6 +113,18 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 752,
+			"base": "c:\"51m589\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Á\n                ÁÁ\n                ",
+			"fragments": [
+				"T0XF4_",
+				"ST ERR",
+				"LST0XC",
+				" ERROR ",
+				"X7BE4_FI"
+			]
 		}
 	],
 	"identified": [
@@ -127,6 +139,6 @@
 			]
 		}
 	],
-	"updt": 1568498732698,
-	"edit": 109
+	"updt": 1568503240528,
+	"edit": 110
 }
