--- a/uknown_1gja1u.wordscraping.json
+++ b/uknown_1gja1u.wordscraping.json
@@ -47,18 +47,21 @@
 				{
 					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
 					"frags": [
+						"sible",
 						"s <bu",
 						"egory",
-						"ctual",
+						"ctual ",
 						"co> <b",
 						"l-actua",
 						"crisis ",
 						"ble for",
+						"-actual",
 						" meme c",
 						"y_ico> <",
 						"o> <oops",
 						"nny_ico>",
 						"bat_ico>",
+						"> <bat_i",
 						"<bunny_i"
 					]
 				}
@@ -92,18 +95,21 @@
 				{
 					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
 					"frags": [
+						"sible",
 						"s <bu",
 						"egory",
-						"ctual",
+						"ctual ",
 						"co> <b",
 						"l-actua",
 						"crisis ",
 						"ble for",
+						"-actual",
 						" meme c",
 						"y_ico> <",
 						"o> <oops",
 						"nny_ico>",
 						"bat_ico>",
+						"> <bat_i",
 						"<bunny_i"
 					]
 				}
@@ -137,18 +143,21 @@
 				{
 					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
 					"frags": [
+						"sible",
 						"s <bu",
 						"egory",
-						"ctual",
+						"ctual ",
 						"co> <b",
 						"l-actua",
 						"crisis ",
 						"ble for",
+						"-actual",
 						" meme c",
 						"y_ico> <",
 						"o> <oops",
 						"nny_ico>",
 						"bat_ico>",
+						"> <bat_i",
 						"<bunny_i"
 					]
 				}
@@ -159,22 +168,25 @@
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
 			"frags": [
+				"sible",
 				"s <bu",
 				"egory",
-				"ctual",
+				"ctual ",
 				"co> <b",
 				"l-actua",
 				"crisis ",
 				"ble for",
+				"-actual",
 				" meme c",
 				"y_ico> <",
 				"o> <oops",
 				"nny_ico>",
 				"bat_ico>",
+				"> <bat_i",
 				"<bunny_i"
 			]
 		}
 	],
-	"updt": 1567804062045,
-	"edit": 67
+	"updt": 1568429147259,
+	"edit": 68
 }
