--- a/uknown_oguceh.db.json
+++ b/uknown_oguceh.db.json
@@ -45,13 +45,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"in th",
 						"er di",
+						" stay",
 						"y in t",
 						"r stac",
-						"\\n2174",
-						"2174 de",
+						"r cards",
+						"ards st",
+						"d\\n2174 ",
+						"ard\\n217",
 						"4 defend",
-						"ck\\n2175 "
+						"2174 def",
+						"ck\\n2175 ",
+						"\\n2175 At"
 					]
 				}
 			]
@@ -81,13 +87,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"in th",
 						"er di",
+						" stay",
 						"y in t",
 						"r stac",
-						"\\n2174",
-						"2174 de",
+						"r cards",
+						"ards st",
+						"d\\n2174 ",
+						"ard\\n217",
 						"4 defend",
-						"ck\\n2175 "
+						"2174 def",
+						"ck\\n2175 ",
+						"\\n2175 At"
 					]
 				}
 			]
@@ -117,13 +129,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"in th",
 						"er di",
+						" stay",
 						"y in t",
 						"r stac",
-						"\\n2174",
-						"2174 de",
+						"r cards",
+						"ards st",
+						"d\\n2174 ",
+						"ard\\n217",
 						"4 defend",
-						"ck\\n2175 "
+						"2174 def",
+						"ck\\n2175 ",
+						"\\n2175 At"
 					]
 				}
 			]
@@ -133,16 +151,22 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"in th",
 				"er di",
+				" stay",
 				"y in t",
 				"r stac",
-				"\\n2174",
-				"2174 de",
+				"r cards",
+				"ards st",
+				"d\\n2174 ",
+				"ard\\n217",
 				"4 defend",
-				"ck\\n2175 "
+				"2174 def",
+				"ck\\n2175 ",
+				"\\n2175 At"
 			]
 		}
 	],
-	"updt": 1567784206233,
-	"edit": 8
+	"updt": 1568359459563,
+	"edit": 9
 }
