--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566226212198,
-	"last_scraped": 1568520712791,
+	"last_scraped": 1568525175131,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1568565308662,
+	"next_scrape": 1568565575586,
 	"category": "coin_flipper",
-	"last_update": 1568520712791,
+	"last_update": 1568525175131,
 	"output": [
 		{
 			"args": {},
-			"calls": 999301,
+			"calls": 1004246,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y tak",
@@ -153,6 +153,6 @@
 			]
 		}
 	],
-	"updt": 1568516326340,
-	"edit": 113
+	"updt": 1568520841119,
+	"edit": 114
 }
