--- a/unknown_h6yxmz.h0_key.json
+++ b/unknown_h6yxmz.h0_key.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_h6yxmz.h0_key",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_h6yxmz.h0_key",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566878677364,
-	"last_scraped": 1568525989387,
+	"last_scraped": 1568530482773,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566878677364
 		}
 	],
-	"next_scrape": 1568566437300,
+	"next_scrape": 1568575545659,
 	"category": "plant_sim",
-	"last_update": 1568525989387,
+	"last_update": 1568530482773,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 97476,
+			"calls": 98819,
 			"base": "c:\"1wseae\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"rajbh",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1568521744731,
-	"edit": 117
+	"updt": 1568526031887,
+	"edit": 118
 }
