--- a/uknown_h7aui7.bot_midsec.json
+++ b/uknown_h7aui7.bot_midsec.json
@@ -6,7 +6,7 @@
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564547536219,
-	"last_scraped": 1568549936632,
+	"last_scraped": 1568554228640,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568594129859,
+	"next_scrape": 1568593921245,
 	"category": "dice_roller",
-	"last_update": 1568549936632,
+	"last_update": 1568554228640,
 	"output": [
 		{
 			"args": {},
-			"calls": 992610,
+			"calls": 1010884,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"tal s",
@@ -51,8 +51,8 @@
 			]
 		}
 	],
-	"updt": 1568545783546,
-	"edit": 115,
+	"updt": 1568550068066,
+	"edit": 116,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
