--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_dk37v3.npcs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dk37v3.npcs",
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566817634405,
-	"last_scraped": 1568551815669,
+	"last_scraped": 1568556075806,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1568592065973,
+	"next_scrape": 1568599587239,
 	"category": "plant_sim",
-	"last_update": 1568551815669,
+	"last_update": 1568556075806,
 	"output": [
 		{
 			"args": {},
@@ -92,7 +92,7 @@
 		},
 		{
 			"args": {},
-			"calls": 21107,
+			"calls": 23010,
 			"base": "c:\"mgvlps\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã\n                ¤Ã\n                ",
 			"fragments": [
 				"cks o",
@@ -115,6 +115,6 @@
 			]
 		}
 	],
-	"updt": 1568547586635,
-	"edit": 117
+	"updt": 1568551873298,
+	"edit": 118
 }
