--- a/uknown_8j8cuc.rectifier.json
+++ b/uknown_8j8cuc.rectifier.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_8j8cuc.rectifier",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_8j8cuc.rectifier",
 	"sector": "K_3429",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559315707721
+		},
+		{
+			"type": "died",
+			"when": 1568561497511
 		}
 	],
 	"next_scrape": 1568603759835,
@@ -56,8 +60,8 @@
 			]
 		}
 	],
-	"updt": 1568555484100,
-	"edit": 425,
+	"updt": 1568559993861,
+	"edit": 426,
 	"identified": [
 		{
 			"document": "NOT FOUND",
