--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_c671te.quack",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "uknown_c671te.quack",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1568584499806,
+	"last_scraped": 1568588611817,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568627332733,
+	"next_scrape": 1568674346781,
 	"category": "plant_sim",
-	"last_update": 1568584499806,
+	"last_update": 1568588611817,
 	"output": [
 		{
 			"args": {},
@@ -116,7 +116,7 @@
 		},
 		{
 			"args": {},
-			"calls": 13064,
+			"calls": 13902,
 			"base": "c:\"51m589\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Á\n                ÁÁ\n                ",
 			"fragments": [
 				"T0XF4_",
@@ -139,6 +139,6 @@
 			]
 		}
 	],
-	"updt": 1568580750042,
-	"edit": 128
+	"updt": 1568584585874,
+	"edit": 129
 }
