--- a/uknown_gi8uls.data_check_sim.json
+++ b/uknown_gi8uls.data_check_sim.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_gi8uls.data_check_sim",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_gi8uls.data_check_sim",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566218845296,
-	"last_scraped": 1568587948861,
+	"last_scraped": 1568592118620,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568628934846,
+	"next_scrape": 1568638193787,
 	"category": "dice_roller",
-	"last_update": 1568587948861,
+	"last_update": 1568592118620,
 	"output": [
 		{
 			"args": {},
-			"calls": 1247385,
+			"calls": 1257659,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"n a f",
@@ -67,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1568583909627,
-	"edit": 126
+	"updt": 1568587967558,
+	"edit": 127
 }
