--- a/uknown_5a4huj.bot_scam_do_not_run.json
+++ b/uknown_5a4huj.bot_scam_do_not_run.json
@@ -73,6 +73,25 @@
 				" MOS ha",
 				"e old de",
 				" We're f"
+			],
+			"hits": [
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"ver a",
+						"o hot",
+						"osed a",
+						"livery",
+						"e: it'",
+						"those o",
+						"o anywh",
+						"l of th",
+						"'re fin",
+						" MOS ha",
+						"e old de",
+						" We're f"
+					]
+				}
 			]
 		}
 	],
@@ -80,19 +99,27 @@
 		{
 			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
 			"frags": [
+				"ver a",
+				"o hot",
 				"ey ca",
 				"ere a",
-				"hose o",
+				"osed a",
+				"e: it'",
 				" but M",
 				" bunch",
+				"those o",
+				"o anywh",
 				"livery ",
+				"l of th",
 				"'s too ",
 				"'re fin",
+				" MOS ha",
 				"e old de",
-				" of the "
+				" of the ",
+				" We're f"
 			]
 		}
 	],
-	"updt": 1567800225775,
-	"edit": 10
+	"updt": 1568406146341,
+	"edit": 11
 }
