--- a/uknown_3zwe2r.tryhard.json
+++ b/uknown_3zwe2r.tryhard.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_3zwe2r.tryhard",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_3zwe2r.tryhard",
 	"sector": "K_3966",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1559587181199
+		},
+		{
+			"type": "died",
+			"when": 1568623504441
 		}
 	],
-	"updt": 1567648412063,
-	"edit": 145,
+	"updt": 1567714945331,
+	"edit": 146,
 	"next_scrape": 1567754374595,
 	"category": "fishie_tank",
 	"last_update": 1567714499519,
