--- a/unknown_bgqmlc.list.json
+++ b/unknown_bgqmlc.list.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_bgqmlc.list",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_bgqmlc.list",
 	"sector": "HJG_6509",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562422977232
+		},
+		{
+			"type": "died",
+			"when": 1568623314693
 		}
 	],
 	"next_scrape": 1567810148514,
@@ -124,8 +128,8 @@
 			]
 		}
 	],
-	"updt": 1567750600303,
-	"edit": 27,
+	"updt": 1567766618806,
+	"edit": 28,
 	"retry_args": [
 		{
 			"CLICK": true
