--- a/unknown_aprmr6.acct.json
+++ b/unknown_aprmr6.acct.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_aprmr6.acct",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_aprmr6.acct",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562756729085,
-	"last_scraped": 1568638731335,
+	"last_scraped": 1568642599657,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562756729085
 		}
 	],
-	"next_scrape": 1568678886169,
+	"next_scrape": 1568687840152,
 	"category": "dice_roller",
-	"last_update": 1568638731335,
+	"last_update": 1568642599657,
 	"output": [
 		{
 			"args": {},
-			"calls": 3430026,
+			"calls": 3441417,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"you w",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1568635201674,
-	"edit": 337
+	"updt": 1568638814983,
+	"edit": 338
 }
