--- a/unknown_9ryxhr.db.json
+++ b/unknown_9ryxhr.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_9ryxhr.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_9ryxhr.db",
 	"sector": "VNP_9228",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560231623057
+		},
+		{
+			"type": "died",
+			"when": 1568658908434
 		}
 	],
 	"next_scrape": 1567727572756,
@@ -147,8 +151,8 @@
 			]
 		}
 	],
-	"updt": 1567681339835,
-	"edit": 110,
+	"updt": 1567719905413,
+	"edit": 111,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
