--- a/uknown_t25yez.accesses.json
+++ b/uknown_t25yez.accesses.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_t25yez.accesses",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_t25yez.accesses",
 	"sector": "K_4785",
 	"sec_level": 4,
@@ -11,8 +11,12 @@
 		{
 			"type": "added",
 			"when": 1565826442342
+		},
+		{
+			"type": "died",
+			"when": 1568658592936
 		}
 	],
-	"updt": 1567622932410,
-	"edit": 2
+	"updt": 1567726231449,
+	"edit": 3
 }
