--- a/uknown_t25yez.bot_scam_do_not_run.json
+++ b/uknown_t25yez.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_t25yez.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_t25yez.bot_scam_do_not_run",
 	"sector": "K_3282",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560208692817
+		},
+		{
+			"type": "died",
+			"when": 1568658744112
 		}
 	],
 	"next_scrape": 1568172679774,
@@ -56,8 +60,8 @@
 			]
 		}
 	],
-	"updt": 1568122629684,
-	"edit": 349,
+	"updt": 1568130529095,
+	"edit": 350,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
