--- a/unknown_fkue99.decorr.json
+++ b/unknown_fkue99.decorr.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_fkue99.decorr",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_fkue99.decorr",
 	"sector": "NGC_1272",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560506116689
+		},
+		{
+			"type": "died",
+			"when": 1568670157953
 		}
 	],
 	"next_scrape": 1567841707969,
@@ -319,8 +323,8 @@
 			]
 		}
 	],
-	"updt": 1567779021647,
-	"edit": 98,
+	"updt": 1567795263799,
+	"edit": 99,
 	"identified": [
 		{
 			"document": "NOT FOUND",
