--- a/unknown_fkue99.private.json
+++ b/unknown_fkue99.private.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_fkue99.private",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_fkue99.private",
 	"sector": "SPC_0043",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565687108587
+		},
+		{
+			"type": "died",
+			"when": 1568670239139
 		}
 	],
 	"scrape_ct": 16,
@@ -119,6 +123,6 @@
 			]
 		}
 	],
-	"updt": 1567795940930,
-	"edit": 8
+	"updt": 1567810608059,
+	"edit": 9
 }
