--- a/unknown_piriip.db.json
+++ b/unknown_piriip.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_piriip.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_piriip.db",
 	"sector": "SPC_9897",
 	"sec_level": 4,
 	"date_added": 1566014947228,
-	"last_scraped": 1567711758843,
+	"last_scraped": 1568687315450,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1567757557822,
+	"next_scrape": 1568733816286,
 	"category": "clicker",
-	"last_update": 1567711758843,
+	"last_update": 1568687315450,
 	"output": [
 		{
 			"args": {},
-			"calls": 18734,
+			"calls": 23362,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ms th",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 20449,
+			"calls": 24700,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ms th",
@@ -76,7 +76,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5269,
+			"calls": 6332,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ms th",
@@ -101,8 +101,8 @@
 			]
 		}
 	],
-	"updt": 1567640746161,
-	"edit": 3,
+	"updt": 1567714945331,
+	"edit": 4,
 	"identified": [
 		{
 			"document": "Erin File",
