--- a/derelict_t9xwp1.wrapper.json
+++ b/derelict_t9xwp1.wrapper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_t9xwp1.wrapper",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_t9xwp1.wrapper",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566482303761,
-	"last_scraped": 1567712130129,
+	"last_scraped": 1568687576743,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1567755523100,
+	"next_scrape": 1568728194914,
 	"category": "fishie_tank",
-	"last_update": 1567712130129,
+	"last_update": 1568687576743,
 	"output": [
 		{
 			"args": {},
-			"calls": 28339,
+			"calls": 32989,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" ## S",
@@ -46,7 +46,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 1517,
+			"calls": 2745,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -77,7 +77,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 38944,
+			"calls": 44393,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				" ## S",
@@ -100,8 +100,8 @@
 			]
 		}
 	],
-	"updt": 1567642326849,
-	"edit": 3,
+	"updt": 1567714945331,
+	"edit": 4,
 	"identified": [
 		{
 			"document": "Prisoners",
