--- a/uknown_30c1j8.win.json
+++ b/uknown_30c1j8.win.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_30c1j8.win",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_30c1j8.win",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564569391220,
-	"last_scraped": 1567711458794,
+	"last_scraped": 1568687155416,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564569391220
 		}
 	],
-	"next_scrape": 1567753231723,
+	"next_scrape": 1568729445090,
 	"category": "fishie_tank",
-	"last_update": 1567711458794,
+	"last_update": 1568687155416,
 	"output": [
 		{
 			"args": {},
-			"calls": 113051,
+			"calls": 120876,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" clev",
@@ -49,7 +49,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 9521,
+			"calls": 10155,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -84,7 +84,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 129891,
+			"calls": 137463,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				" clev",
@@ -125,6 +125,6 @@
 			]
 		}
 	],
-	"updt": 1567633303976,
-	"edit": 6
+	"updt": 1567714945331,
+	"edit": 7
 }
