--- a/abandoned_8nxhv2.scrape.json
+++ b/abandoned_8nxhv2.scrape.json
@@ -1,25 +1,25 @@
 {
 	"_id": "abandoned_8nxhv2.scrape",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "abandoned_8nxhv2.scrape",
 	"sector": "K_0689",
 	"sec_level": 4,
 	"date_added": 1561699104212,
-	"last_scraped": 1567714747785,
+	"last_scraped": 1568688813097,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561699104212
 		}
 	],
-	"next_scrape": 1567759958235,
+	"next_scrape": 1568730827128,
 	"category": "clicker",
-	"last_update": 1567714747785,
+	"last_update": 1568688813097,
 	"output": [
 		{
 			"args": {},
-			"calls": 531185,
+			"calls": 540163,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"na as",
@@ -95,7 +95,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 522711,
+			"calls": 527695,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"na as",
@@ -171,7 +171,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 77318,
+			"calls": 78079,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"na as",
@@ -295,6 +295,6 @@
 			]
 		}
 	],
-	"updt": 1567649089886,
-	"edit": 58
+	"updt": 1567714945331,
+	"edit": 59
 }
