--- a/unknown_9ocefk.scrape_t1.json
+++ b/unknown_9ocefk.scrape_t1.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_9228",
 	"sec_level": 4,
 	"date_added": 1560272034818,
-	"last_scraped": 1567714437157,
+	"last_scraped": 1568688742796,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560272034818
 		}
 	],
-	"next_scrape": 1567756728694,
+	"next_scrape": 1568729044949,
 	"category": "clicker",
-	"last_update": 1567714437157,
+	"last_update": 1568688742796,
 	"output": [
 		{
 			"args": {},
-			"calls": 907567,
+			"calls": 914150,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"t of ",
@@ -61,7 +61,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 958702,
+			"calls": 969049,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"t of ",
@@ -142,8 +142,8 @@
 			]
 		}
 	],
-	"updt": 1567648412063,
-	"edit": 112,
+	"updt": 1567714945331,
+	"edit": 113,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
@@ -158,6 +158,11 @@
 				"or them.",
 				"e part i"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
