--- a/unknown_czv1dd.looter.json
+++ b/unknown_czv1dd.looter.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_7171",
 	"sec_level": 4,
 	"date_added": 1562518581911,
-	"last_scraped": 1567713045055,
+	"last_scraped": 1568688080088,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1567759637898,
+	"next_scrape": 1568733715995,
 	"category": "risk_factor",
-	"last_update": 1567713045055,
+	"last_update": 1568688080088,
 	"output": [
 		{
 			"args": {},
-			"calls": 2226,
+			"calls": 3184,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
 				"X2BC7",
@@ -176,8 +176,8 @@
 			]
 		}
 	],
-	"updt": 1567646384612,
-	"edit": 5,
+	"updt": 1567714945331,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "NOT FOUND",
@@ -232,6 +232,11 @@
 			"frags": [
 				"A_SECT0X"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "LOSE"
 		}
 	]
 }
