--- a/uknown_1nprk1.nosnipe.json
+++ b/uknown_1nprk1.nosnipe.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_1nprk1.nosnipe",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_1nprk1.nosnipe",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562744570479,
-	"last_scraped": 1567718859125,
+	"last_scraped": 1568690695491,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562744570479
 		}
 	],
-	"next_scrape": 1567760259600,
+	"next_scrape": 1568735811849,
 	"category": "clicker",
-	"last_update": 1567718859125,
+	"last_update": 1568690695491,
 	"output": [
 		{
 			"args": {},
-			"calls": 208573,
+			"calls": 213479,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"this_",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 240083,
+			"calls": 243449,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"this_",
@@ -148,6 +148,11 @@
 			]
 		}
 	],
-	"updt": 1567678404492,
-	"edit": 24
+	"updt": 1567719002796,
+	"edit": 25,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
