--- a/uknown_8pcvow.lib.json
+++ b/uknown_8pcvow.lib.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_8pcvow.lib",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_8pcvow.lib",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566934028964,
-	"last_scraped": 1567717069710,
+	"last_scraped": 1568689998535,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567759717728,
+	"next_scrape": 1568732071446,
 	"category": "fishie_tank",
-	"last_update": 1567717069710,
+	"last_update": 1568689998535,
 	"output": [
 		{
 			"args": {},
-			"calls": 41548,
+			"calls": 48974,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"y | B",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 1567,
+			"calls": 2321,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -93,7 +93,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 28712,
+			"calls": 34094,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"y | B",
@@ -124,8 +124,8 @@
 			]
 		}
 	],
-	"updt": 1567657432892,
-	"edit": 4,
+	"updt": 1567717198100,
+	"edit": 5,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
