--- a/uknown_fvx38a.to_str.json
+++ b/uknown_fvx38a.to_str.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_fvx38a.to_str",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_fvx38a.to_str",
 	"sector": "SPC_9316",
 	"sec_level": 4,
 	"date_added": 1562678039546,
-	"last_scraped": 1567717693091,
+	"last_scraped": 1568690242862,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562678039546
 		}
 	],
-	"next_scrape": 1567757826074,
+	"next_scrape": 1568735236475,
 	"category": "fishie_tank",
-	"last_update": 1567717693091,
+	"last_update": 1568690242862,
 	"output": [
 		{
 			"args": {},
-			"calls": 253039,
+			"calls": 257557,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" this",
@@ -56,7 +56,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 26306,
+			"calls": 27643,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -98,7 +98,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 303187,
+			"calls": 306611,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				" this",
@@ -146,6 +146,6 @@
 			]
 		}
 	],
-	"updt": 1567659913994,
-	"edit": 25
+	"updt": 1567717875606,
+	"edit": 26
 }
