--- a/unknown_2kg38m.db.json
+++ b/unknown_2kg38m.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_2kg38m.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_2kg38m.db",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564236313207,
-	"last_scraped": 1567718054113,
+	"last_scraped": 1568690312418,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 2,
-	"next_scrape": 1567763202204,
+	"next_scrape": 1568733022229,
 	"category": "fishie_tank",
-	"last_update": 1567718054113,
+	"last_update": 1568690312418,
 	"output": [
 		{
 			"args": {},
-			"calls": 85968,
+			"calls": 95998,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ng] [",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 8352,
+			"calls": 9305,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 113191,
+			"calls": 121366,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ng] [",
@@ -134,6 +134,6 @@
 			]
 		}
 	],
-	"updt": 1567663071038,
-	"edit": 6
+	"updt": 1567718100183,
+	"edit": 7
 }
