--- a/uknown_1nprk1.nosnipe.json
+++ b/uknown_1nprk1.nosnipe.json
@@ -6,16 +6,16 @@
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562744570479,
-	"last_scraped": 1568690695491,
+	"last_scraped": 1568690712268,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562744570479
 		}
 	],
-	"next_scrape": 1568735811849,
+	"next_scrape": 1568735419470,
 	"category": "clicker",
-	"last_update": 1568690695491,
+	"last_update": 1568690712268,
 	"output": [
 		{
 			"args": {},
@@ -97,7 +97,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 38823,
+			"calls": 39497,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"this_",
@@ -148,11 +148,6 @@
 			]
 		}
 	],
-	"updt": 1567719002796,
-	"edit": 25,
-	"retry_args": [
-		{
-			"CLICK": true
-		}
-	]
+	"updt": 1568690705168,
+	"edit": 26
 }
