--- a/uknown_9j64nk.birb.json
+++ b/uknown_9j64nk.birb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9j64nk.birb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_9j64nk.birb",
 	"sector": "SPC_9089",
 	"sec_level": 4,
 	"date_added": 1564446964388,
-	"last_scraped": 1567719360849,
+	"last_scraped": 1568691023400,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1567763912811,
+	"next_scrape": 1568737049727,
 	"category": "clicker",
-	"last_update": 1567719360849,
+	"last_update": 1568691023400,
 	"output": [
 		{
 			"args": {},
-			"calls": 43991,
+			"calls": 51767,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"15C s",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 29134,
+			"calls": 43830,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"15C s",
@@ -92,7 +92,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7193,
+			"calls": 8788,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"15C s",
@@ -119,8 +119,8 @@
 			]
 		}
 	],
-	"updt": 1567679533191,
-	"edit": 5,
+	"updt": 1567719455295,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
