--- a/uknown_18chv1.devops.json
+++ b/uknown_18chv1.devops.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_18chv1.devops",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_18chv1.devops",
 	"sector": "K_1197",
 	"sec_level": 4,
 	"date_added": 1559908830836,
-	"last_scraped": 1567719161531,
+	"last_scraped": 1568690873040,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1559908830836
 		}
 	],
-	"next_scrape": 1567760879095,
+	"next_scrape": 1568730559102,
 	"category": "fishie_tank",
-	"last_update": 1567719161531,
+	"last_update": 1568690873040,
 	"output": [
 		{
 			"args": {},
-			"calls": 1184125,
+			"calls": 1192108,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"FILE0",
@@ -67,7 +67,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 110443,
+			"calls": 110985,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -120,7 +120,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 1212434,
+			"calls": 1221062,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"FILE0",
@@ -165,8 +165,8 @@
 			]
 		}
 	],
-	"updt": 1567679081569,
-	"edit": 140,
+	"updt": 1567719229566,
+	"edit": 141,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
